nw-policies/app1.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: pod1
  labels:
   app: swiggy
spec:
  containers:
    - name: cont1
      image: nginx
