nw-policies/app2.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: pod3
  labels:
   app: zomato
spec:
  containers:
    - name: cont1
      image: nginx
