nw-policies/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: svc1
spec:
  type: ClusterIP
  selector:
    app: swiggy
  ports:
    - port: 80
