nw-policies/allow-swiggy-ingress-egress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-app-ingress-egress
spec:
  podSelector:
    matchLabels:
      app: swiggy
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              ns: preprod
          podSelector:
            matchLabels:
              app: db
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              ns: preprod
          podSelector:
            matchLabels:
              app: db
      ports:
        - protocol: TCP
          port: 3306
